--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,20 @@
 asgiref==3.8.1
-Django==3.2.25
+certifi==2024.6.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+cryptography==42.0.8
+defusedxml==0.7.1
+dj-rest-auth==6.0.0
+Django==5.0.6
+django-allauth==0.54.0
 djangorestframework==3.15.1
-pytz==2024.1
+djangorestframework-simplejwt==4.7.2
+idna==3.7
+oauthlib==3.2.2
+pycparser==2.22
+PyJWT==2.8.0
+python3-openid==3.2.0
+requests==2.32.3
+requests-oauthlib==2.0.0
 sqlparse==0.5.0
+urllib3==2.2.1
