--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cffi==1.16.0
 charset-normalizer==3.3.2
 cryptography==42.0.8
 defusedxml==0.7.1
+dj-database-url==0.5.0
 dj-rest-auth==2.1.9
 Django==5.0.6
 django-allauth==0.44.0
@@ -11,6 +12,7 @@ djangorestframework==3.15.1
 djangorestframework-simplejwt==4.7.2
 idna==3.7
 oauthlib==3.2.2
+psycopg2==2.9.9
 pycparser==2.22
 PyJWT==2.8.0
 python3-openid==3.2.0
