--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,13 @@ dj-database-url==0.5.0
 dj-rest-auth==2.1.9
 Django==5.0.6
 django-allauth==0.44.0
+django-cors-headers==4.3.1
 djangorestframework==3.15.1
 djangorestframework-simplejwt==4.7.2
+gunicorn==22.0.0
 idna==3.7
 oauthlib==3.2.2
+packaging==24.1
 psycopg2==2.9.9
 pycparser==2.22
 PyJWT==2.8.0
