--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ cryptography==42.0.8
 defusedxml==0.7.1
 dj-database-url==0.5.0
 dj-rest-auth==2.1.9
-Django==5.0.6
+Django==3.2.25
 django-allauth==0.44.0
 django-cors-headers==4.3.1
 djangorestframework==3.15.1
@@ -19,6 +19,7 @@ psycopg2==2.9.9
 pycparser==2.22
 PyJWT==2.8.0
 python3-openid==3.2.0
+pytz==2024.1
 requests==2.32.3
 requests-oauthlib==2.0.0
 sqlparse==0.5.0
